# mytest

./: 404.html  Cargo.toml  Dioxus.toml  vercel.json
.github/workflows/: ci.yml
wasm/: mytest.js  mytest.js.br  mytest_bg.wasm  mytest_bg.wasm.br
wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
